// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Patterns/Multi ComboBox As Form Item 1`] = `
<div
  style="height: 300px;"
>
  
    
  <div
    class="fd-form-item"
  >
    
    
    <div
      class="fd-popover"
    >
      
        
      <div
        aria-controls="F4GcX348a"
        aria-expanded="true"
        aria-haspopup="true"
        class="fd-popover__control"
        role="combobox"
      >
        
            
        <div
          class="fd-input-group fd-input-group--control"
          tabindex="0"
        >
          
                
          <div
            class="fd-tokenizer"
          >
            
                    
            <div
              class="fd-tokenizer__inner"
            >
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Apple
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: Apple"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Orange
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: Orange"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Kiwi
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: Kiwi"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <span
                class="fd-token"
                role="button"
                tabindex="0"
              >
                
                            
                <span
                  class="fd-token__text"
                >
                  
                                Banana
                            
                </span>
                
                            
                <button
                  aria-label="unselect option: Banana"
                  class="fd-token__close"
                />
                
                        
              </span>
              
                        
              <input
                aria-label="multi input sample as form item"
                class="fd-input fd-input-group__input fd-tokenizer__input"
              />
              
                    
            </div>
            
                
          </div>
          
                
          <span
            class="fd-input-group__addon fd-input-group__addon--button"
          >
            
                    
            <button
              aria-controls="F4GcX348a"
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="down arrow"
              class="fd-input-group__button fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--navigation-down-arrow"
              />
              
                    
            </button>
            
                
          </span>
          
            
        </div>
        
        
      </div>
      
        
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
        id="F4GcX348a"
      >
        
        
        <div
          class="fd-popover__wrapper"
        >
          
            
          <ul
            aria-label="Fruits"
            aria-multiselectable="true"
            class="fd-list fd-list--multi-input"
            role="listbox"
          >
            
                
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                    
              <input
                checked=""
                class="fd-checkbox fd-list__input"
                id="Ai4ez611"
                tabindex="-1"
                type="checkbox"
              />
              
                    
              <label
                class="fd-checkbox__label fd-list__label"
                for="Ai4ez611"
              >
                
                        
                <span
                  class="fd-checkbox__text fd-list__title"
                >
                  
                            Apple
                        
                </span>
                
                    
              </label>
              
                
            </li>
            
                
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                    
              <input
                checked=""
                class="fd-checkbox fd-list__input"
                id="Ai4ez612"
                tabindex="-1"
                type="checkbox"
              />
              
                    
              <label
                class="fd-checkbox__label fd-list__label"
                for="Ai4ez612"
              >
                
                        
                <span
                  class="fd-checkbox__text fd-list__title"
                >
                  
                            Orange
                        
                </span>
                
                    
              </label>
              
                
            </li>
            
                
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                    
              <input
                checked=""
                class="fd-checkbox fd-list__input"
                id="Ai4ez614"
                tabindex="-1"
                type="checkbox"
              />
              
                    
              <label
                class="fd-checkbox__label fd-list__label"
                for="Ai4ez614"
              >
                
                        
                <span
                  class="fd-checkbox__text fd-list__title"
                >
                  
                            Banana
                        
                </span>
                
                    
              </label>
              
                
            </li>
            
                
            <li
              class="fd-list__item is-selected"
              role="option"
              tabindex="0"
            >
              
                    
              <input
                checked=""
                class="fd-checkbox fd-list__input"
                id="Ai4ez615"
                tabindex="-1"
                type="checkbox"
              />
              
                    
              <label
                class="fd-checkbox__label fd-list__label"
                for="Ai4ez615"
              >
                
                        
                <span
                  class="fd-checkbox__text fd-list__title"
                >
                  
                            Kiwi
                        
                </span>
                
                    
              </label>
              
                
            </li>
            
                
            <li
              class="fd-list__item"
              role="option"
              tabindex="0"
            >
              
                    
              <input
                class="fd-checkbox fd-list__input"
                id="Ai4ez617"
                tabindex="-1"
                type="checkbox"
              />
              
                    
              <label
                class="fd-checkbox__label fd-list__label"
                for="Ai4ez617"
              >
                
                        
                <span
                  class="fd-checkbox__text fd-list__title"
                >
                  
                            Lemon
                        
                </span>
                
                    
              </label>
              
                
            </li>
            
            
          </ul>
          
        
        </div>
        
        
      </div>
      
    
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Cozy And Compact 1`] = `
<div
  class="fd-container"
  style="height: 300px;"
>
  
    
  <div
    class="fd-row"
  >
    
	
    <div
      class="fd-col fd-col--6"
    >
      
        
      <label
        class="fd-form-label"
      >
        
            Multi ComboBox Cozy Mode
        
      </label>
      
        
      <div
        class="fd-popover"
      >
        
            
        <div
          aria-controls="F4GcX348a"
          aria-expanded="true"
          aria-haspopup="true"
          class="fd-popover__control"
          role="combobox"
        >
          
                
          <div
            class="fd-input-group fd-input-group--control"
            tabindex="0"
          >
            
                    
            <div
              class="fd-tokenizer"
            >
              
                        
              <div
                class="fd-tokenizer__inner"
              >
                
                            
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Apple
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: apple"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Orange
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Orange"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Banana
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Banana"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <input
                  aria-label="multi input cozy"
                  class="fd-input fd-input-group__input fd-tokenizer__input"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <span
              class="fd-input-group__addon fd-input-group__addon--button"
            >
              
                        
              <button
                aria-controls="F4GcX348a"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="down arrow"
                class="fd-input-group__button fd-button fd-button--transparent"
              >
                
                            
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
                        
              </button>
              
                    
            </span>
            
                
          </div>
          
            
        </div>
        
            
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
          id="F4GcX348a"
        >
          
            
          <div
            class="fd-popover__wrapper"
          >
            
                
            <ul
              aria-label="Fruits"
              aria-multiselectable="true"
              class="fd-list fd-list--multi-input"
              role="listbox"
            >
              
                    
              <li
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  checked=""
                  class="fd-checkbox fd-list__input"
                  id="Ai4ez611"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="Ai4ez611"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Apple
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                    
              <li
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  checked=""
                  class="fd-checkbox fd-list__input"
                  id="Ai4ez612"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="Ai4ez612"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Orange
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                    
              <li
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  checked=""
                  class="fd-checkbox fd-list__input"
                  id="Ai4ez614"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="Ai4ez614"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Banana
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                    
              <li
                class="fd-list__item"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  class="fd-checkbox fd-list__input"
                  id="Ai4ez615"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="Ai4ez615"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Kiwi
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                    
              <li
                class="fd-list__item"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  class="fd-checkbox fd-list__input"
                  id="Ai4ez617"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="Ai4ez617"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Lemon
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                
            </ul>
            
            
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      class="fd-col fd-col--6"
    >
      
        
      <label
        class="fd-form-label"
      >
        
            Multi ComboBox Compact Mode
        
      </label>
      

        
      <div
        class="fd-popover"
      >
        
            
        <div
          aria-controls="F4GcX34a"
          aria-expanded="true"
          aria-haspopup="true"
          class="fd-popover__control"
          role="combobox"
        >
          
                
          <div
            class="fd-input-group fd-input-group--control"
            tabindex="0"
          >
            
                    
            <div
              class="fd-tokenizer fd-tokenizer--compact"
            >
              
                        
              <div
                class="fd-tokenizer__inner"
              >
                
                            
                <span
                  class="fd-token fd-token--compact"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Apple
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Apple"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <span
                  class="fd-token fd-token--compact"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Orange
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Orange"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <span
                  class="fd-token fd-token--compact"
                  role="button"
                  tabindex="0"
                >
                  
                                
                  <span
                    class="fd-token__text"
                  >
                    
                                    Banana
                                
                  </span>
                  
                                
                  <button
                    aria-label="unselect option: Bannana"
                    class="fd-token__close"
                  />
                  
                            
                </span>
                
                            
                <input
                  aria-label="Multi Input Sample"
                  class="fd-input fd-input-group__input fd-input--compact fd-tokenizer__input"
                />
                
                        
              </div>
              
                    
            </div>
            
                    
            <span
              class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
            >
              
                        
              <button
                aria-controls="F4GcX34a"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="hidden button"
                class="fd-input-group__button fd-button fd-button--transparent fd-button--compact"
              >
                
                            
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
                        
              </button>
              
                    
            </span>
            
                
          </div>
          
            
        </div>
        
            
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
          id="F4GcX34a"
        >
          
            
          <div
            class="fd-popover__wrapper"
          >
            
                
            <ul
              aria-label="Fruits"
              aria-multiselectable="true"
              class="fd-list fd-list--multi-input fd-list--compact"
              role="listbox"
            >
              
                    
              <li
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  checked=""
                  class="fd-checkbox fd-checkbox--compact fd-list__input"
                  id="Ai1ez611"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="Ai1ez611"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Apple
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                    
              <li
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  checked=""
                  class="fd-checkbox fd-checkbox--compact fd-list__input"
                  id="Ai2ez612"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="Ai2ez612"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Orange
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                    
              <li
                class="fd-list__item is-selected"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  checked=""
                  class="fd-checkbox fd-checkbox--compact fd-list__input"
                  id="Ai3ez614"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="Ai3ez614"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Banana
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                    
              <li
                class="fd-list__item"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  class="fd-checkbox fd-checkbox--compact fd-list__input"
                  id="Ai8ez615"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="Ai8ez615"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Kiwi
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                    
              <li
                class="fd-list__item"
                role="option"
                tabindex="0"
              >
                
                        
                <input
                  class="fd-checkbox fd-checkbox--compact fd-list__input"
                  id="AiHez617"
                  tabindex="-1"
                  type="checkbox"
                />
                
                        
                <label
                  class="fd-checkbox__label fd-list__label"
                  for="AiHez617"
                >
                  
                            
                  <span
                    class="fd-checkbox__text fd-list__title"
                  >
                    
                                Lemon
                            
                  </span>
                  
                        
                </label>
                
                    
              </li>
              
                
            </ul>
            
            
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Filtering 1`] = ` `;

exports[`Storyshots Patterns/Multi ComboBox Grouping 1`] = `
<div
  style="height: 400px;"
>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      aria-controls="F4H8X34a"
      aria-expanded="true"
      aria-haspopup="true"
      class="fd-popover__control"
      role="combobox"
    >
      
            
      <div
        class="fd-input-group fd-input-group--control"
        tabindex="0"
      >
        
                
        <div
          class="fd-tokenizer"
        >
          
                    
          <div
            class="fd-tokenizer__inner"
          >
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Apple
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Apple"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Orange
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Orange"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Kiwi
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Kiwi"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-tokenizer__indicator"
            >
              2 more
            </span>
             
                        
            <input
              aria-label="multi input sample as group item"
              class="fd-input fd-input-group__input fd-tokenizer__input"
            />
            
                    
          </div>
          
                
        </div>
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                    
          <button
            aria-controls="F4H8X34a"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="down arrow"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--navigation-down-arrow"
            />
            
                    
          </button>
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="F4H8X34a"
    >
      
        
      <div
        class="fd-popover__wrapper"
      >
        
           
        <label
          class="fd-list__group-header"
          id="Fruits"
        >
          
                Fruits
            
        </label>
        
            
        <ul
          aria-label="Fruits"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input"
          role="listbox"
        >
          
                
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai1ez651"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai1ez651"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Apple
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
                
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai2ez652"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai2ez652"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Orange
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
                
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai3ez654"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai3ez654"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Kiwi
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
                
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              class="fd-checkbox fd-list__input"
              id="Ai8ez655"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai8ez655"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Banana
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
                
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              class="fd-checkbox fd-list__input"
              id="AiHez657"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="AiHez657"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Lemon
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
            
        </ul>
        
            
        <label
          class="fd-list__group-header"
          id="selectMultipleVegsLabel"
        >
          
                Vegetables
            
        </label>
        
            
        <ul
          aria-label="selectMultipleVegsLabel"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input"
          role="listbox"
        >
          
                
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai8ez689"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai8ez689"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Onion
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
                
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai8ez685"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai8ez685"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Tomato
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
            
        </ul>
        
        
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Match Popover Body Size 1`] = `
<div
  style="height: 300px;"
>
  
    
  <div
    class="fd-popover"
  >
    
        
    <div
      aria-controls="F4HGFHX34a"
      aria-expanded="true"
      aria-haspopup="true"
      class="fd-popover__control"
      role="combobox"
    >
      
            
      <div
        class="fd-input-group fd-input-group--control"
        tabindex="0"
      >
        
                
        <div
          class="fd-tokenizer"
        >
          
                    
          <div
            class="fd-tokenizer__inner"
          >
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Apple
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Apple"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Orange
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Orange"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                            
              <span
                class="fd-token__text"
              >
                
                                Kiwi
                            
              </span>
              
                            
              <button
                aria-label="unselect option: Kiwi"
                class="fd-token__close"
              />
              
                        
            </span>
            
                        
            <span
              class="fd-tokenizer__indicator"
            >
              2 more
            </span>
             
                        
            <input
              aria-label="multi input sample popover size body"
              class="fd-input fd-input-group__input fd-tokenizer__input"
            />
            
                    
          </div>
          
                
        </div>
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                    
          <button
            aria-controls="F4HGFHX34a"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="down arrow"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--navigation-down-arrow"
            />
            
                    
          </button>
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown"
      id="F4HGFHX34a"
    >
      
        
      <div
        class="fd-popover__wrapper"
      >
        
            
        <ul
          aria-label="fruits"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input"
          role="listbox"
        >
          
                
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai124z651"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai124z651"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Apple
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
                
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai134z651"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai134z651"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Orange
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
                
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai1366z651"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai1366z651"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Kiwi
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
                
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              class="fd-checkbox fd-list__input"
              id="Ai136gf51"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai136gf51"
            >
              
                        
              <span
                class=" fd-checkbox__text fd-list__title"
              >
                
                            Banana
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
                
          <li
            class="fd-list__item"
            role="option"
            tabindex="0"
          >
            
                    
            <input
              class="fd-checkbox fd-list__input"
              id="Ai136ggfd"
              tabindex="-1"
              type="checkbox"
            />
            
                    
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai136ggfd"
            >
              
                        
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                            Lemon
                        
              </span>
              
                    
            </label>
            
                
          </li>
          
            
        </ul>
        
        
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Mobile Mode 1`] = `
<div
  class="fd-dialog fd-dialog-docs-static fd-select-docs-max-height fd-dialog--active"
  id="select-dialog-example"
>
  
    
  <div
    class="fd-dialog__content"
  >
    
        
    <header
      class="fd-dialog__header fd-bar fd-bar--header-with-subheader"
    >
      
            
      <div
        class="fd-bar__left"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <h3
            class="fd-title fd-title--h5"
          >
            
                        Select Ingredient
                    
          </h3>
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="close"
            class="fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--decline"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </header>
    
        
    <div
      class="fd-dialog__subheader fd-bar fd-bar--cozy fd-bar--subheader"
    >
      
            
      <div
        class="fd-bar__middle"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <div
            class="fd-input-group"
            tabindex="0"
          >
            
                        
            <div
              class="fd-tokenizer"
            >
              
                             
              <div
                class="fd-tokenizer__inner"
              >
                
                                 
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                     
                  <span
                    class="fd-token__text"
                  >
                    
                                         Apple
                                     
                  </span>
                  
                                     
                  <button
                    aria-label="unselect option: Apple"
                    class="fd-token__close"
                  />
                  
                                 
                </span>
                
                                 
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                     
                  <span
                    class="fd-token__text"
                  >
                    
                                         Orange
                                     
                  </span>
                  
                                     
                  <button
                    aria-label="unselect option: Orange"
                    class="fd-token__close"
                  />
                  
                                 
                </span>
                
                                 
                <span
                  class="fd-token"
                  role="button"
                  tabindex="0"
                >
                  
                                     
                  <span
                    class="fd-token__text"
                  >
                    
                                         Kiwi
                                     
                  </span>
                  
                                     
                  <button
                    aria-label="unselect option: Kiwi"
                    class="fd-token__close"
                  />
                  
                                 
                </span>
                
                                 
                <span
                  class="fd-tokenizer__indicator"
                >
                  4 more
                </span>
                 
                                 
                <input
                  aria-label="multi input mobile mode"
                  class="fd-input fd-input-group__input fd-tokenizer__input"
                />
                
                             
              </div>
              
                         
            </div>
            
                        
            <span
              class="fd-input-group__addon fd-input-group__addon--button"
            >
              
                            
              <button
                aria-label="down arrow"
                class="fd-input-group__button fd-button fd-button--transparent"
              >
                
                                
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
                            
              </button>
              
                        
            </span>
            
                    
          </div>
          
                
        </div>
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            aria-label="multi combobox mobilmode button"
            class="fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--multiselect-all"
            />
            
                    
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-dialog__body fd-dialog__body--no-vertical-padding"
    >
      
             
      <ul
        aria-label="Fruits"
        aria-multiselectable="true"
        class="fd-list fd-list--multi-input fd-list--has-message"
        role="listbox"
      >
        
                
        <li
          class="fd-list__message fd-list__message--success"
          role="option"
        >
          Success Message
        </li>
        
                
        <li
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                     
          <input
            checked=""
            class="fd-checkbox  fd-list__input"
            id="GGi4ez641"
            tabindex="-1"
            type="checkbox"
          />
          
                     
          <label
            class="fd-checkbox__label fd-list__label"
            for="GGi4ez641"
          >
            
                         
            <span
              class="fd-checkbox__text fd-list__title"
            >
              
                             Apple
                         
            </span>
            
                     
          </label>
          
                 
        </li>
        
                  
        <li
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                     
          <input
            checked=""
            class="fd-checkbox  fd-list__input"
            id="Ai4FGFG612"
            tabindex="-1"
            type="checkbox"
          />
          
                     
          <label
            class="fd-checkbox__label fd-list__label"
            for="Ai4FGFG612"
          >
            
                         
            <span
              class="fd-checkbox__text fd-list__title"
            >
              Orange
            </span>
            
                     
          </label>
          
                 
        </li>
        
                  
        <li
          class="fd-list__item is-selected"
          role="option"
          tabindex="0"
        >
          
                     
          <input
            checked=""
            class="fd-checkbox  fd-list__input"
            id="Ai4e88614"
            tabindex="-1"
            type="checkbox"
          />
          
                     
          <label
            class="fd-checkbox__label fd-list__label"
            for="Ai4e88614"
          >
            
                         
            <span
              class="fd-checkbox__text fd-list__title"
            >
              Kiwi
            </span>
            
                     
          </label>
          
                 
        </li>
        
                  
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                     
          <input
            class="fd-checkbox  fd-list__input"
            id="Ai4egh6024"
            tabindex="-1"
            type="checkbox"
          />
          
                     
          <label
            class="fd-checkbox__label fd-list__label"
            for="Ai4egh6024"
          >
            
                         
            <span
              class="fd-checkbox__text fd-list__title"
            >
              Banana
            </span>
            
                     
          </label>
          
                 
        </li>
        
                  
        <li
          class="fd-list__item"
          role="option"
          tabindex="0"
        >
          
                     
          <input
            class="fd-checkbox  fd-list__input"
            id="7gJHdsad"
            tabindex="-1"
            type="checkbox"
          />
          
                     
          <label
            class="fd-checkbox__label fd-list__label"
            for="7gJHdsad"
          >
            
                         
            <span
              class="fd-checkbox__text fd-list__title"
            >
              Lemon
            </span>
            
                     
          </label>
          
                 
        </li>
        
             
      </ul>
      
        
    </div>
    
       
    <footer
      class="fd-dialog__footer fd-bar fd-bar--cozy fd-bar--footer"
    >
      
            
      <div
        class="fd-bar__right"
      >
        
                
        <div
          class="fd-bar__element"
        >
          
                    
          <button
            class="fd-button fd-button--emphasized"
          >
            OK
          </button>
          
                
        </div>
        
            
      </div>
      
        
    </footer>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Read Only And Disabled 1`] = `
<div
  class="fd-container"
>
  
	
  <div
    class="fd-row"
  >
    
		
    <div
      class="fd-col fd-col--6"
    >
      
			
      <div
        class="fd-popover"
      >
        
				
        <div
          aria-controls="F4GcX3X8a"
          aria-expanded="false"
          aria-haspopup="false"
          class="fd-popover__control"
          role="combobox"
        >
          
					
          <div
            aria-readonly="true"
            class="fd-input-group fd-input-group--control"
            readonly=""
            tabindex="0"
          >
            
						
            <div
              class="fd-tokenizer fd-tokenizer--readonly"
            >
              
							
              <div
                class="fd-tokenizer__inner"
              >
                
								
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Bibendum
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Lorem
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Dolor
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Filter
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-token fd-token--readonly"
                >
                  
									
                  <span
                    class="fd-token__text"
                  >
                    
										Lorem
									
                  </span>
                  
								
                </span>
                
								
                <span
                  class="fd-tokenizer__indicator"
                >
                  
									
                  <div
                    class="fd-popover"
                  >
                    
										
                    <div
                      aria-controls="F4GF5348a"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-label="multi combobox"
                      class="fd-popover__control fd-input-group__control"
                    >
                      
											
                      <span
                        class="fd-tokenizer__indicator"
                        role="button"
                      >
                        
												4 more
											
                      </span>
                      
										
                    </div>
                    
										
                    <div
                      aria-hidden="true"
                      class="fd-popover__body"
                      id="F4GF5348a"
                    >
                      
										
                    </div>
                    
									
                  </div>
                  
								
                </span>
                
								
                <input
                  aria-label="multi input readonly or disabled"
                  aria-readonly="true"
                  class="fd-input fd-input-group__input fd-tokenizer__input"
                  readonly=""
                />
                
							
              </div>
              
						
            </div>
            
					
          </div>
          
				
        </div>
        
			
      </div>
      
			
    </div>
    
			
    <div
      class="fd-col fd-col--6"
    >
      
				
      <div
        class="fd-popover"
      >
        
					
        <div
          aria-disabled="true"
          aria-expanded="false"
          aria-haspopup="true"
          class="fd-popover__control"
          disabled=""
          role="combobox"
        >
          
						
          <div
            aria-disabled="true"
            class="fd-input-group fd-input-group--control"
            disabled=""
            tabindex="0"
          >
            
							
            <div
              class="fd-tokenizer"
            >
              
								
              <div
                class="fd-tokenizer__inner"
              >
                
									
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Bibendum
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Lorem
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Dolor
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-token fd-token--readonly"
                  role="button"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Filter
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-token fd-token--readonly"
                >
                  
										
                  <span
                    class="fd-token__text"
                  >
                    
											Lorem
										
                  </span>
                  
									
                </span>
                
									
                <span
                  class="fd-tokenizer__indicator"
                >
                  
										
                  <div
                    class="fd-popover"
                  >
                    
											
                    <div
                      aria-controls="F4GcX34Xa"
                      aria-expanded="false"
                      aria-haspopup="true"
                      aria-label="multi combobox"
                      class="fd-popover__control fd-input-group__control"
                    >
                      
												
                      <span
                        aria-hidden="true"
                        class="fd-tokenizer__indicator"
                        fd-popover__body"=""
                        id="F4GcX34Xa"
                        role="button>
													4 more
												</span>
											</div>
											<div class="
                      >
                        
											
                      </span>
                    </div>
                    
										
                  </div>
                  
									
                </span>
                
									
                <input
                  aria-label="multi input read only or disabled"
                  class="fd-input fd-input-group__input fd-tokenizer__input"
                />
                
								
              </div>
              
							
            </div>
            
							
            <span
              class="fd-input-group__addon fd-input-group__addon--button"
            >
              
								
              <button
                aria-label="down arrow"
                class="fd-input-group__button fd-button fd-button--transparent"
                tabindex="-1"
              >
                
									
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
								
              </button>
              
							
            </span>
            
						
          </div>
          
					
        </div>
        
				
      </div>
      
			
    </div>
    
		
  </div>
  
	
</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Semantic 1`] = `
<div
  style="height: 300px;"
>
  

  <div
    class="fd-popover"
  >
    
    
    <div
      aria-controls="F4GcKJH8a"
      aria-expanded="true"
      aria-haspopup="true"
      aria-label="multi combobox"
      class="fd-popover__control fd-input-group__control"
      role="combobox"
    >
      
        
      <div
        class="fd-input-group fd-input-group--control is-success"
        tabindex="0"
      >
        
            
        <div
          class="fd-tokenizer"
        >
          
                 
          <div
            class="fd-tokenizer__inner"
          >
            
                     
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                         
              <span
                class="fd-token__text"
              >
                
                             Apple
                         
              </span>
              
                         
              <button
                aria-label="unselect option: Apple"
                class="fd-token__close"
              />
              
                     
            </span>
            
                     
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                         
              <span
                class="fd-token__text"
              >
                
                             Orange
                         
              </span>
              
                         
              <button
                aria-label="unselect option: Orange"
                class="fd-token__close"
              />
              
                     
            </span>
            
                     
            <span
              class="fd-token"
              role="button"
              tabindex="0"
            >
              
                         
              <span
                class="fd-token__text"
              >
                
                             Kiwi
                         
              </span>
              
                         
              <button
                aria-label="unselect option: Kiwi"
                class="fd-token__close"
              />
              
                     
            </span>
            
                     
            <span
              class="fd-tokenizer__indicator"
            >
              4 more
            </span>
             
                     
            <input
              aria-label="multi input semantic"
              class="fd-input fd-input-group__input fd-tokenizer__input"
            />
            
                 
          </div>
          
            
        </div>
        
            
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                
          <button
            aria-controls="F4GcKJH8a"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="down arrow"
            class="fd-input-group__button fd-button fd-button--transparent"
          >
            
                    
            <i
              class="sap-icon--navigation-down-arrow"
            />
            
                
          </button>
          
            
        </span>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow fd-popover__body--dropdown fd-popover__body--dropdown-fill"
      id="F4GcKJH8a"
    >
      
      
      <div
        class="fd-popover__wrapper"
      >
        
        
        <ul
          aria-label="Fruits"
          aria-multiselectable="true"
          class="fd-list fd-list--multi-input fd-list--has-message"
          role="listbox"
        >
          
            
          <li
            class="fd-list__message fd-list__message--success"
            role="option"
          >
            Success Message
          </li>
          
             
          <li
            class="fd-list__item is-selected"
            role="option"
            tabindex="0"
          >
            
                
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="AGi4ez611"
              tabindex="-1"
              type="checkbox"
            />
            
                
            <label
              class="fd-checkbox__label fd-list__label"
              for="AGi4ez611"
            >
              
                    
              <span
                class="fd-checkbox__text fd-list__title"
              >
                
                        Apple
                    
              </span>
              
                
            </label>
            
            
          </li>
          
             
          <li
            class="fd-list__item is-selected"
            role="option"
          >
            
                
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai4Fez612"
              tabindex="-1"
              type="checkbox"
            />
            
                
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai4Fez612"
            >
              
                    
              <span
                class="fd-checkbox__text fd-list__title"
              >
                Orange
              </span>
              
                
            </label>
            
            
          </li>
          
             
          <li
            class="fd-list__item is-selected"
            role="option"
          >
            
                
            <input
              checked=""
              class="fd-checkbox fd-list__input"
              id="Ai4eGz614"
              tabindex="-1"
              type="checkbox"
            />
            
                
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai4eGz614"
            >
              
                    
              <span
                class="fd-checkbox__text fd-list__title"
              >
                Kiwi
              </span>
              
                
            </label>
            
            
          </li>
          
             
          <li
            class="fd-list__item"
            role="option"
          >
            
                
            <input
              class="fd-checkbox fd-list__input"
              id="Ai4egh614"
              tabindex="-1"
              type="checkbox"
            />
            
                
            <label
              class="fd-checkbox__label fd-list__label"
              for="Ai4egh614"
            >
              
                    
              <span
                class="fd-checkbox__text fd-list__title"
              >
                Banana
              </span>
              
                
            </label>
            
            
          </li>
          
             
          <li
            class="fd-list__item"
            role="option"
          >
            
                
            <input
              class="fd-checkbox fd-list__input"
              id="jdFffsd3"
              tabindex="-1"
              type="checkbox"
            />
            
                
            <label
              class="fd-checkbox__label fd-list__label"
              for="jdFffsd3"
            >
              
                    
              <span
                class="fd-checkbox__text fd-list__title"
              >
                Lemon
              </span>
              
                
            </label>
            
            
          </li>
          
        
        </ul>
        
    
      </div>
      
  
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Patterns/Multi ComboBox Two Column Combo Box 1`] = ` `;
